--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,27 @@
 body {
-    background-color: aquamarine;
+    background-color: rgb(246, 246, 190);
+}
+
+h1{
+    text-align: center;
+}
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    margin: 60px 700px;
+}
+
+p {
+    text-align: center;
+}
+
+a {
+    color: green;
+}
+
+img {
+    display: block;
+    margin: 0 auto;
+    border-radius: 10px;
 }
